add contacts page, styles for main templates, info_homepage

--- a/local/templates/main/components/bitrix/news.list/banners/style.css
+++ b/local/templates/main/components/bitrix/news.list/banners/style.css
@@ -1,12 +1,146 @@
-div.news-list
-{
-	word-wrap: break-word;
+.slaider {
+    position: relative;
+    min-height: 85vh;
+    width: 100%;
 }
-div.news-list img.preview_picture
-{
-	float:left;
-	margin:0 4px 6px 0;
+
+.slaider .slaid {
+    height: auto;
+    min-height: 85vh;
+    padding: 3% 0;
+    color: #fff;
 }
-.news-date-time {
-	color:#486DAA;
+
+.slaider .slaid-img1 {
+    background: url("img/img1.png") no-repeat center;
+    background-size: cover;
+}
+
+.slaider .slaid-img2 {
+    background: url("img/img3.jpg") no-repeat center;
+    background-size: cover;
+}
+
+.slaider .slaid-img3 {
+    background: url("img/img4.jpg") no-repeat center;
+    background-size: cover;
+}
+
+.slaider .slaid-img4 {
+    background: url("img/img5.jpg") no-repeat center;
+    background-size: cover;
+}
+
+.slaider .slaid__wrapper {
+    position: relative;
+    height: auto;
+    min-height: 80vh;
+    margin-left: 15%;
+    width: 30%;
+    background: rgba(235, 79, 154, 0.85);
+    border-radius: 25px;
+    padding: 35px;
+}
+
+.slaider .slaid__title {
+    font-family: "ArialRoundedBold";
+    font-size: 42px;
+    text-align: center;
+    margin-bottom: 35px;
+}
+
+.slaider .slaid__text {
+    font-size: .9rem;
+    line-height: 1.5;
+}
+
+.slaider .slaid__img {
+    position: absolute;
+    right: 0;
+    bottom: 10px;
+    width: 10vw;
+    height: 15vh;
+    background: url("../img/leaf.png") no-repeat center;
+    background-size: contain;
+}
+
+.slaider .slick-arrow:before {
+    font-size: 40px;
+}
+
+.slaider .slick-next {
+    right: 5%;
+}
+
+.slaider .slick-prev {
+    z-index: 10;
+    left: 2%;
+}
+
+.slaider .slick-dots {
+    position: absolute;
+    bottom: 10px;
+}
+
+.slaider .slick-dots li button:before {
+    color: #fff;
+    font-size: 20px;
+}
+
+.slaider .slick-dotted {
+    margin-bottom: 0;
+}
+
+@media (max-width: 1199.98px) {
+    .slaider .slaid__title {
+        font-size: 2rem;
+        margin-bottom: 25px;
+    }
+    .slaider .slaid__text {
+        font-size: .75rem;
+    }
+}
+
+@media (max-width: 991.98px) {
+    .slaider .slaid__wrapper {
+        width: 35%;
+        margin-left: 15%;
+    }
+    .slaider .slaid__title {
+        font-size: 1.5rem;
+    }
+}
+
+@media (max-width: 767.98px) {
+    .slaider .slaid__wrapper {
+        width: 40%;
+    }
+    .slaider .slaid__title {
+        margin-bottom: 20px;
+    }
+    .slaider .slick-dots {
+        bottom: 3px;
+    }
+}
+
+@media (max-width: 575.98px) {
+    .slaider .slaid__wrapper {
+        margin: 0 auto;
+        width: 60%;
+    }
+    .slaider .slaid__title {
+        font-size: 2rem;
+    }
+    .slaider .slaid__text {
+        font-size: .8rem;
+    }
+    .slaider .slaid__img {
+        right: 5%;
+    }
+}
+
+@media (max-width: 400px) {
+    .slaider .slaid__wrapper {
+        width: 75%;
+    }
 }
