--- a/local/templates/main/components/bitrix/news.list/certificates/style.css
+++ b/local/templates/main/components/bitrix/news.list/certificates/style.css
@@ -1,5 +1,3 @@
-/* documents */
-
 .section-documents {
     margin: 10% 0;
 }
@@ -56,15 +54,14 @@
 .documents__item {
     position: relative;
     width: 100%;
-    height: 0;
-    padding-bottom: 141%;
+    height: auto;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
     z-index: 0;
 }
 
 .documents__item:not(:last-child) {
-    margin-bottom: 25%;
+    margin-bottom: 10%;
 }
 
 .documents__item:hover .documents__discription {
@@ -72,6 +69,14 @@
     -webkit-transition: 0.5s;
     -o-transition: 0.5s;
     transition: 0.5s;
+}
+
+.documents__img-wrapper {
+    position: relative;
+    width: 100%;
+    height: 0;
+    padding-bottom: 145%;
+    z-index: 0;
 }
 
 .documents__img {
@@ -135,8 +140,7 @@
     top: 10%;
     left: 22%;
     width: 56%;
-    height: 0;
-    padding-bottom: 80%;
+    height: auto;
     background: #fff;
     z-index: 99999;
     opacity: 1;
@@ -164,7 +168,6 @@
     .documents__window {
         left: 27.5%;
         width: 45%;
-        padding-bottom: 65%;
     }
 }
 
@@ -188,7 +191,6 @@
     .documents__window {
         left: 25%;
         width: 50%;
-        padding-bottom: 71%;
     }
 }
 
@@ -207,13 +209,17 @@
         width: 90%;
     }
     .documents__discription {
-        height: 20%;
+        margin-top: 5px;
+        opacity: 1;
+        display: block;
+        position: static;
+        height: 15%;
+        min-height: 100px;
         font-size: 13px;
     }
     .documents__window {
         left: 10%;
         width: 80%;
-        padding-bottom: 112%;
         top: 5%;
     }
     .documents__close {
@@ -229,13 +235,11 @@
         width: 95%;
     }
     .documents__discription {
-        height: 30%;
-        font-size: 10px;
+        font-size: 11px;
     }
     .documents__window {
         left: 5%;
         width: 90%;
-        padding-bottom: 128%;
         top: 5%;
     }
 }
