--- a/local/templates/main/components/bitrix/news.list/infrastructure/style.css
+++ b/local/templates/main/components/bitrix/news.list/infrastructure/style.css
@@ -1,12 +1,190 @@
-div.news-list
-{
-	word-wrap: break-word;
+/*section infrastructure for camping page */
+
+.section-infrastructure {
+    background: #fff;
 }
-div.news-list img.preview_picture
-{
-	float:left;
-	margin:0 4px 6px 0;
+
+.infrastructure {
+    width: 80%;
+    margin: 0 auto;
 }
-.news-date-time {
-	color:#486DAA;
+
+.infrastructure__title {
+    margin-left: 3%;
+}
+
+.infrastructure__wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: start;
+    -ms-flex-align: start;
+    align-items: flex-start;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    background-color: #fff;
+}
+
+.infrastructure__item {
+    width: 19%;
+    height: auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    margin-bottom: 3%;
+}
+
+.infrastructure__item:not(:nth-child(6n)) {
+    margin-right: calc(5%/4);
+}
+
+.infrastructure__item-img {
+    width: 100%;
+    min-height: 150px;
+    margin-bottom: 15px;
+}
+
+.infrastructure__item-text {
+    font-size: .9rem;
+    text-align: center;
+    line-height: 1.5;
+    width: 70%;
+}
+
+.infrastructure__item-helper {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 300px;
+    background-color: #fff;
+    border-radius: 25px;
+    border: 1px solid #000;
+    padding: 10px;
+    font-size: .9rem;
+    line-height: 1.5;
+    overflow: hidden;
+    -webkit-box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
+
+.infrastructure .break {
+    display: none;
+}
+
+.infrastructure .img1 {
+    background: url("img/icon1.png") no-repeat center;
+    background-size: contain;
+}
+
+.infrastructure .img2 {
+    background: url("img/icon2.png") no-repeat center;
+    background-size: contain;
+}
+
+.infrastructure .img3 {
+    background: url("img/icon3.png") no-repeat center;
+    background-size: contain;
+}
+
+.infrastructure .img4 {
+    background: url("img/icon4.png") no-repeat center;
+    background-size: contain;
+}
+
+.infrastructure .img5 {
+    background: url("img/icon5.png") no-repeat center;
+    background-size: contain;
+}
+
+.infrastructure .img6 {
+    background: url("img/icon6.png") no-repeat center;
+    background-size: contain;
+}
+
+.infrastructure .img7 {
+    background: url("img/icon7.png") no-repeat center;
+    background-size: contain;
+}
+
+@media (max-width: 767.98px) {
+    .infrastructure {
+        width: 100%;
+    }
+    .infrastructure__item {
+        margin-bottom: 1%;
+    }
+    .infrastructure__item-img {
+        min-height: 150px;
+        margin-bottom: 0;
+    }
+    .infrastructure__item-text {
+        width: 100%;
+        font-size: .8rem;
+    }
+    .infrastructure__item-helper {
+        font-size: .8rem;
+        line-height: 1.3;
+        width: 250px;
+    }
+}
+
+@media (max-width: 575.98px) {
+    .infrastructure__title {
+        margin-bottom: 5px;
+    }
+    .infrastructure__item {
+        width: 20%;
+    }
+    .infrastructure__item:not(:nth-child(6n)) {
+        margin-right: 3%;
+    }
+    .infrastructure__item-img {
+        min-height: 130px;
+    }
+    .infrastructure__item-text {
+        font-size: .9rem;
+    }
+    .infrastructure__item-helper {
+        width: 200px;
+    }
+    .infrastructure .break {
+        display: block;
+        -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    }
+}
+
+@media (max-width: 450px) {
+    .infrastructure__item {
+        width: 25%;
+    }
+    .infrastructure__item:not(:nth-child(6n)) {
+        margin-right: 8%;
+    }
+    .infrastructure__item-img {
+        min-height: 100px;
+    }
+    .infrastructure__item-text {
+        font-size: .8rem;
+    }
+    .infrastructure__item-helper {
+        font-size: .7rem;
+        padding: 7px;
+        width: 150px;
+        border-radius: 15px;
+    }
 }
