--- a/local/templates/main/components/bitrix/news.list/program/style.css
+++ b/local/templates/main/components/bitrix/news.list/program/style.css
@@ -1,12 +1,138 @@
-div.news-list
-{
-	word-wrap: break-word;
+/*section gallery */
+
+.gallery {
+    min-height: 100vh;
+    width: 100%;
+    margin: 0 auto;
 }
-div.news-list img.preview_picture
-{
-	float:left;
-	margin:0 4px 6px 0;
+
+.gallery__show {
+    display: inline-block;
+    width: 55%;
+    height: auto;
+    background-color: #fff;
+    overflow: hidden;
 }
-.news-date-time {
-	color:#486DAA;
+
+.gallery__show img {
+    width: 100%;
+    -o-object-fit: contain;
+    object-fit: contain;
+    -o-object-position: top;
+    object-position: top;
+}
+
+.gallery__wrapper {
+    background: #fff;
+    width: 40%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-box-pack: start;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    float: right;
+}
+
+.gallery__item {
+    width: calc(100%/3 - 6%);
+    height: 85px;
+    margin-bottom: 3%;
+}
+
+.gallery__item:not(:nth-child(3n)) {
+    margin-right: calc(6%/2);
+}
+
+.gallery__img {
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+    object-fit: cover;
+    margin: 0;
+    cursor: pointer;
+}
+
+.gallery .clearfix {
+    clear: both;
+}
+
+@media (max-width: 991.98px) {
+    .gallery__show {
+        width: 50%;
+    }
+    .gallery__wrapper {
+        width: 48%;
+    }
+}
+
+@media (max-width: 767.98px) {
+    .gallery__show {
+        width: 60%;
+    }
+    .gallery__wrapper {
+        width: 37%;
+    }
+    .gallery__item {
+        width: calc(100%/2 - 3%);
+    }
+    .gallery__item:not(.gallery__item:nth-child(3n)) {
+        margin-right: 0;
+    }
+    .gallery__item:not(.gallery__item:nth-child(2n)) {
+        margin-right: 3%;
+    }
+}
+
+@media (max-width: 575.98px) {
+    .section-gallery {
+        margin-top: 120px;
+    }
+    .section-gallery .section__title {
+        margin-left: 5%;
+    }
+    .gallery {
+        text-align: center;
+    }
+    .gallery__show {
+        width: 90%;
+        margin-bottom: 10%;
+    }
+    .gallery__wrapper {
+        width: 80%;
+        margin: 0 auto;
+        float: none;
+        background-color: rgba(137, 196, 62, 0.85);
+        padding: 30px 3%;
+        border-radius: 25px;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
+        -webkit-box-sizing: border-box;
+        box-sizing: border-box;
+    }
+    .gallery__item {
+        height: 150px;
+    }
+    .gallery__item:last-child {
+        -ms-flex-item-align: start;
+        align-self: start;
+    }
+    .gallery__item:not(.gallery__item:nth-child(2n)) {
+        margin-right: 5%;
+    }
+}
+
+@media (max-width: 400px) {
+    .gallery__wrapper {
+        width: 98%;
+    }
 }
