--- a/local/templates/main/components/bitrix/news.list/voucher_cost/style.css
+++ b/local/templates/main/components/bitrix/news.list/voucher_cost/style.css
@@ -1,12 +1,379 @@
-div.news-list
-{
-	word-wrap: break-word;
+/*section notes */
+
+.section-notes {
+    margin-top: 5%;
 }
-div.news-list img.preview_picture
-{
-	float:left;
-	margin:0 4px 6px 0;
+
+.article-notes {
+    margin: 10% 0;
+    position: relative;
+    z-index: 0;
+    overflow: hidden;
 }
-.news-date-time {
-	color:#486DAA;
+
+.notes {
+    position: relative;
+    z-index: 1;
+}
+
+.notes__title {
+    margin-top: 70px;
+    margin-left: 5%;
+    margin-bottom: -5%;
+    font-family: ArialRoundedBold;
+    font-size: 1.4rem;
+    position: relative;
+    font-weight: 700;
+    line-height: 1;
+}
+
+.notes__title::after {
+    content: '';
+    display: inline-block;
+    width: 100%;
+    height: 4px;
+    background: #00aced;
+}
+
+.notes__wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+}
+
+.notes__wrapper-left {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+    -ms-flex-direction: row-reverse;
+    flex-direction: row-reverse;
+}
+
+.notes__item-img {
+    width: 55%;
+    overflow: hidden;
+    position: relative;
+    height: 0;
+    padding-bottom: 100%;
+    z-index: 1;
+}
+
+.notes__item-text {
+    width: 40%;
+}
+
+.notes__img {
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    height: 100%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    -o-object-fit: cover;
+    object-fit: cover;
+    z-index: 0;
+}
+
+.note__title {
+    margin-top: 10px;
+    font-family: HelveticaBold;
+    font-size: 1rem;
+    line-height: 1.5;
+    color: #000;
+    letter-spacing: unset;
+    font-weight: 400;
+    position: relative;
+}
+
+.note__title::after {
+    content: '';
+    display: block;
+    height: 3px;
+    width: 7%;
+    background: #00aced;
+    margin-top: 5px;
+}
+
+.note__text {
+    font-size: 14px;
+    line-height: 1.5;
+    margin-top: 26px;
+}
+
+.note__text-bold {
+    font-weight: bold;
+}
+
+.note__text p {
+    margin-bottom: 10px;
+}
+
+.note__list {
+    list-style-type: disc;
+    margin-left: 15px;
+}
+
+.note__list li {
+    margin-bottom: 10px;
+}
+
+.note__card {
+    width: 140%;
+    margin-top: 15%;
+    padding: 20px;
+    color: #fff;
+    border-radius: 25px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    position: relative;
+    z-index: 1;
+}
+
+.note__card::before {
+    content: '';
+    display: block;
+    height: 0;
+    padding-bottom: 20%;
+    width: 25%;
+    background: url("img/leaf.png") no-repeat center;
+    background-size: contain;
+}
+
+.note__card-right {
+    margin-left: -40%;
+}
+
+.note__card-right::before {
+    margin-right: 5%;
+}
+
+.note__card-left {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+    -ms-flex-direction: row-reverse;
+    flex-direction: row-reverse;
+}
+
+.note__card-left::before {
+    width: 25%;
+    -webkit-transform: rotate(-90deg);
+    -ms-transform: rotate(-90deg);
+    transform: rotate(-90deg);
+}
+
+.note__card-orange {
+    background: rgba(243, 177, 32, 0.85);
+}
+
+.note__card-text {
+    width: 70%;
+    line-height: 1.5;
+    font-size: 14px;
+}
+
+.lines-three::before {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url("img/line.png") no-repeat 0% 10%, url("img/line.png") no-repeat -3% 0%;
+    -webkit-transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+    transform: rotate(180deg);
+    background-size: 11%;
+    z-index: -1;
+}
+
+.lines-three::after {
+    content: '';
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    background: url("img/line.png") no-repeat -10% 15%;
+    background-size: 11%;
+    z-index: -1;
+}
+
+.lines-two::before {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background: url("img/line.png") no-repeat -9% 1%;
+    -webkit-transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+    transform: rotate(180deg);
+    background-size: 11%;
+}
+
+.lines-two::after {
+    content: '';
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    background: url("img/line.png") no-repeat -10% 15%;
+    background-size: 11%;
+}
+
+@media (max-width: 991.98px) {
+    .note__title {
+        font-size: 0.9rem;
+        line-height: 1.2;
+    }
+    .note__text {
+        font-size: 12px;
+        margin-top: 15px;
+    }
+    .note__list li {
+        margin-bottom: 5px;
+    }
+    .note__card {
+        margin-top: 10%;
+    }
+    .note__card-text {
+        font-size: 14px;
+    }
+}
+
+@media (max-width: 767.98px) {
+    .notes__item-img {
+        min-height: 100%;
+    }
+}
+
+@media (max-width: 575.98px) {
+    .article-notes {
+        margin: 15% 0;
+    }
+    .notes__title {
+        margin-top: 130px;
+    }
+    .notes__wrapper {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+        flex-direction: column;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        justify-content: center;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
+    }
+    .notes__item {
+        width: 95%;
+    }
+    .notes__item-img {
+        min-height: 0;
+        margin-bottom: 5%;
+        padding-bottom: 70%;
+    }
+    .notes__item-text {
+        margin-left: 0;
+    }
+    .notes__img {
+        width: 100%;
+        top: 0;
+        left: 0;
+        -webkit-transform: translate(0%, 0%);
+        -ms-transform: translate(0%, 0%);
+        transform: translate(0%, 0%);
+    }
+    .note {
+        border-radius: 25px;
+        color: #fff;
+        padding: 30px 20px;
+    }
+    .note-green {
+        background: rgba(137, 196, 62, 0.85);
+    }
+    .note-orange {
+        background: rgba(243, 177, 32, 0.85);
+    }
+    .note__title {
+        color: #fff;
+        font-size: 25px;
+    }
+    .note__title::after {
+        content: '';
+        background: #fff;
+        width: 15%;
+        height: 5px;
+    }
+    .note__text {
+        font-size: 15px;
+    }
+    .note__card {
+        background: transparent;
+        width: 100%;
+        padding: 0;
+        padding: 15px;
+    }
+    .note__card::before {
+        content: '';
+        display: none;
+    }
+    .note__card-right {
+        margin-left: 0;
+    }
+    .note__card-text {
+        width: 100%;
+        font-size: 12px;
+        line-height: 1.2;
+    }
+    .lines-three::before,
+    .lines-two::before {
+        display: none;
+    }
+    .lines-three::after,
+    .lines-two::after {
+        display: none;
+    }
+}
+
+@media (max-width: 400px) {
+    .notes__item {
+        width: 98%;
+    }
+    .notes__item-img {
+        padding-bottom: 90%;
+    }
+    .note__title {
+        font-size: 18px;
+    }
+    .note__text {
+        font-size: 12px;
+    }
 }
