--- a/local/templates/main/components/bitrix/news.list/accommodation/style.css
+++ b/local/templates/main/components/bitrix/news.list/accommodation/style.css
@@ -1,12 +1,167 @@
-div.news-list
-{
-	word-wrap: break-word;
+/*section accommodation */
+
+.section-accommodation {
+    margin-top: 120px;
 }
-div.news-list img.preview_picture
-{
-	float:left;
-	margin:0 4px 6px 0;
+
+.accommodation {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
 }
-.news-date-time {
-	color:#486DAA;
+
+.accommodation__title {
+    margin-left: 5%;
+    margin-bottom: 5%;
+    font-size: 23px;
+    font-family: ArialRoundedBold;
+    line-height: 1.5;
+}
+
+.accommodation__title::after {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 4px;
+    background: #00aced;
+    margin-top: 6px;
+}
+
+.accommodation__preview {
+    width: 100%;
+    height: 800px;
+    margin-bottom: 2%;
+    position: relative;
+    overflow: hidden;
+}
+
+.accommodation__preview .accommodation__img {
+    height: 100%;
+    width: auto;
+}
+
+.accommodation__wrapper {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-box-pack: start;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+}
+
+.accommodation__item {
+    width: 32%;
+    position: relative;
+    height: 500px;
+    overflow: hidden;
+    margin-bottom: 2%;
+}
+
+.accommodation__item:not(:nth-of-type(3n)) {
+    margin-right: 2%;
+}
+
+.accommodation__img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    -o-object-fit: cover;
+    object-fit: cover;
+    z-index: 2;
+}
+
+.accommodation__discription {
+    text-align: center;
+    display: block;
+    width: 100%;
+    padding: 40px 0 10px;
+    color: #fff;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    font-size: 13px;
+    background: -webkit-gradient(linear, left bottom, left top, from(rgba(0, 0, 0, 0.7)), color-stop(70%, rgba(0, 0, 0, 0.3)), to(transparent));
+    background: -o-linear-gradient(bottom, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.3) 70%, transparent);
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.3) 70%, transparent);
+    z-index: 3;
+}
+
+@media (max-width: 1199.98px) {
+    .accommodation__preview {
+        height: 650px;
+    }
+    .accommodation__item {
+        height: 450px;
+    }
+}
+
+@media (max-width: 991.98px) {
+    .accommodation__preview {
+        height: 500px;
+    }
+    .accommodation__item {
+        height: 320px;
+    }
+}
+
+@media (max-width: 767.98px) {
+    .accommodation__title {
+        font-size: 18px;
+    }
+    .accommodation__preview {
+        height: 400px;
+    }
+    .accommodation__item {
+        height: 280px;
+    }
+}
+
+@media (max-width: 575.98px) {
+    .section-accommodation {
+        margin-top: 140px;
+    }
+    .accommodation__wrapper {
+        -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+        justify-content: space-between;
+        background: rgba(137, 196, 62, 0.85);
+        padding: 20px 0;
+        margin-top: 5%;
+    }
+    .accommodation__item {
+        width: 49%;
+    }
+    .accommodation__item:not(:nth-of-type(3n)) {
+        margin-right: 0;
+    }
+    .accommodation__preview {
+        height: 330px;
+    }
+}
+
+@media (max-width: 400px) {
+    .accommodation__item {
+        height: 250px;
+    }
 }
