--- a/local/templates/main/components/bitrix/news.list/pedagogical_staff/style.css
+++ b/local/templates/main/components/bitrix/news.list/pedagogical_staff/style.css
@@ -297,52 +297,14 @@
     .teachers__popup .popup .teachers__arrow-prev {
         left: 0;
     }
+    .teachers__arrow-prev:hover {
+        animation: none;
+    }
     .teachers__popup .popup .teachers__arrow-next {
         right: 0;
     }
-    @-webkit-keyframes arrowPrev {
-        0% {
-            left: 0%;
-        }
-        50% {
-            left: -2%;
-        }
-        100% {
-            left: 0%;
-        }
-    }
-    @keyframes arrowPrev {
-        0% {
-            left: 0%;
-        }
-        50% {
-            left: -2%;
-        }
-        100% {
-            left: 0%;
-        }
-    }
-    @-webkit-keyframes arrowNext {
-        0% {
-            right: 0%;
-        }
-        50% {
-            right: -2%;
-        }
-        100% {
-            right: 0%;
-        }
-    }
-    @keyframes arrowNext {
-        0% {
-            right: 0%;
-        }
-        50% {
-            right: -2%;
-        }
-        100% {
-            right: 0%;
-        }
+    .teachers__arrow-next:hover {
+        animation: none;
     }
 }
 
