fixed bug summer-camp/accommodation page (scroll)

--- a/local/templates/main/components/bitrix/news.list/accommodation/style.css
+++ b/local/templates/main/components/bitrix/news.list/accommodation/style.css
@@ -70,6 +70,7 @@
     height: 500px;
     overflow: hidden;
     margin-bottom: 2%;
+    cursor: pointer;
 }
 
 .accommodation__item:not(:nth-of-type(3n)) {
