--- a/local/templates/main/components/bitrix/news.list/happyevent/style.css
+++ b/local/templates/main/components/bitrix/news.list/happyevent/style.css
@@ -1,12 +1,207 @@
-div.news-list
-{
-	word-wrap: break-word;
+/*section questions */
+
+.section-question {
+    margin-top: 8%;
 }
-div.news-list img.preview_picture
-{
-	float:left;
-	margin:0 4px 6px 0;
+
+.questions__wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
 }
-.news-date-time {
-	color:#486DAA;
+
+.questions__list {
+    margin-left: 5%;
+    width: 30%;
+    display: block;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+}
+
+.questions__item {
+    background: #f3b22124;
+    border-left: 3px solid #89c43e;
+    padding: 15px 30px;
+    border-bottom: 1px solid #fff;
+    text-transform: uppercase;
+    font-size: 0.9rem;
+    line-height: 1.5;
+    cursor: pointer;
+}
+
+.questions__item .answer {
+    display: none;
+}
+
+.question-active {
+    background: #89c43e;
+    color: #fff;
+    padding-left: 40px;
+    padding-right: 20px;
+    -webkit-transition: padding 1s ease;
+    -o-transition: padding 1s ease;
+    transition: padding 1s ease;
+}
+
+.answer {
+    font-size: 11px;
+    line-height: 1.5;
+}
+
+.answer__wrapper {
+    margin-right: 5%;
+    width: 55%;
+    min-height: 50vh;
+}
+
+.answer__title {
+    font-size: 17px;
+    text-transform: uppercase;
+    line-height: 1.5;
+    font-weight: 500;
+    margin-bottom: 30px;
+}
+
+.answer__title::after {
+    content: '';
+    display: block;
+    width: 7%;
+    height: 3px;
+    background: #f3b221;
+    margin-top: 6px;
+}
+
+.answer__text {
+    margin-bottom: 10px;
+}
+
+.answer__text-bold {
+    font-weight: bold;
+}
+
+.answer__list {
+    list-style-type: disc;
+}
+
+.answer__list-item {
+    margin-bottom: 10px;
+}
+
+.answer__table {
+    border-collapse: collapse;
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+.answer__table-item {
+    border: 1px solid #000;
+    padding: 10px;
+    line-height: 1.5;
+}
+
+.answer__img {
+    width: 100%;
+    height: auto;
+    margin-bottom: 10px;
+}
+
+.answer__close {
+    display: none;
+}
+
+@media (max-width: 991.98px) {
+    .questions__list {
+        margin-left: 0;
+        width: 35%;
+    }
+    .questions__item {
+        font-size: 0.8rem;
+        padding: 15px;
+    }
+    .answer__wrapper {
+        margin-right: 0;
+    }
+    .answer__title {
+        font-size: 14px;
+        margin-bottom: 20px;
+    }
+}
+
+@media (max-width: 767.98px) {
+    .questions__list {
+        width: 40%;
+    }
+    .questions__item {
+        font-size: 0.7rem;
+        padding: 10px;
+    }
+    .answer__title {
+        margin-bottom: 15px;
+    }
+    .answer__list {
+        margin-left: 15px;
+    }
+}
+
+@media (max-width: 575.98px) {
+    .questions__list {
+        width: 100%;
+    }
+    .questions__item {
+        font-size: 14px;
+        padding: 20px;
+        background: #fff;
+        text-decoration: underline;
+    }
+    .question-active {
+        background: #fff;
+        color: #000;
+        text-decoration: underline;
+        padding: 20px;
+        -webkit-transition: none;
+        -o-transition: none;
+        transition: none;
+    }
+    .answer {
+        font-size: 16px;
+    }
+    .answer__wrapper {
+        width: 100%;
+        height: 100%;
+        padding: 20px 25px;
+        display: block;
+        position: fixed;
+        top: 0;
+        left: 0;
+        background: #f1f1f1;
+        z-index: 999;
+        overflow: auto;
+    }
+    .answer__title {
+        font-size: 26px;
+    }
+    .answer__title::after {
+        width: 10%;
+    }
+    .answer__close {
+        display: block;
+        position: absolute;
+        top: 0;
+        right: 0;
+        font-size: 40px;
+        font-weight: bold;
+        cursor: pointer;
+    }
 }
